# duckdb-tpcds-to-parquet

./: .gitignore  README.md  pyproject.toml  tpcds_generator.py
